// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<label
  className="sc-hQaVPy iPiwgF"
>
  <input
    checked={true}
    className="sc-cykDdr eQaqBl"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="sc-dxKplh fKohXe"
  />
</label>
`;

exports[`Switch renders RTL 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-hQaVPy iPiwgF"
  >
    <input
      checked={true}
      className="sc-cykDdr eQaqBl"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxKplh fKohXe"
    />
  </label>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<label
  className="sc-hQaVPy iPiwgF"
>
  <input
    checked={true}
    className="sc-cykDdr eThVhg"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="sc-dxKplh elfsRi"
  />
</label>
`;

exports[`Switch renders Theme variant with Caption 1`] = `
<div
  className="sc-ehRLEV iNbGYj"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="sc-cYmoNK sc-dRbDqh gBOeuh cOHzTw"
    color="bulma.100"
  >
    AM
  </span>
  <label
    className="sc-hQaVPy iPiwgF"
  >
    <input
      checked={true}
      className="sc-cykDdr eThVhg"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxKplh elfsRi"
    />
  </label>
  <span
    checked={false}
    className="sc-cYmoNK sc-dRbDqh gBOeuh cGvVts"
    color="bulma.100"
  >
    PM
  </span>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <label
    className="sc-hQaVPy gYdcIv"
    size="xs"
  >
    <input
      checked={true}
      className="sc-cykDdr dNEMem"
      id="test-switch-1"
      onChange={[Function]}
      size="xs"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxKplh fKohXe"
    />
  </label>
  <label
    className="sc-hQaVPy infeKI"
    size="md"
  >
    <input
      checked={true}
      className="sc-cykDdr dNEMem"
      id="test-switch-2"
      onChange={[Function]}
      size="md"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxKplh fKohXe"
    />
  </label>
  <label
    className="sc-hQaVPy loPTAt"
    size="lg"
  >
    <input
      checked={true}
      className="sc-cykDdr dNEMem"
      id="test-switch-3"
      onChange={[Function]}
      size="lg"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxKplh fKohXe"
    />
  </label>
</div>
`;

exports[`Switch renders with Caption 1`] = `
<div
  className="sc-ehRLEV iNbGYj"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="sc-cYmoNK sc-dRbDqh gBOeuh cOHzTw"
    color="bulma.100"
  >
    OFF
  </span>
  <label
    className="sc-hQaVPy iPiwgF"
  >
    <input
      checked={true}
      className="sc-cykDdr eQaqBl"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxKplh fKohXe"
    />
  </label>
  <span
    checked={false}
    className="sc-cYmoNK sc-dRbDqh gBOeuh cGvVts"
    color="bulma.100"
  >
    ON
  </span>
</div>
`;
